--- a/SUS/SUS/Apps/MyFirsMvcApp/BattleCards.csproj
+++ b/SUS/SUS/Apps/MyFirsMvcApp/BattleCards.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ViewModels\Users\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
