Andreys with Error views

--- a/SUS/SUS/Apps/Andreys/Andreys.csproj
+++ b/SUS/SUS/Apps/Andreys/Andreys.csproj
@@ -32,10 +32,13 @@
     <None Update="Views\Products\Details.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Shared\Error.cshtml">
+    <None Update="Views\Products\Error.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Views\Shared\_Layout.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Views\Users\Error.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Views\Users\Login.cshtml">
