--- a/VisitACity/Data/VisitACity.Data/VisitACity.Data.csproj
+++ b/VisitACity/Data/VisitACity.Data/VisitACity.Data.csproj
@@ -44,4 +44,8 @@
     <ProjectReference Include="..\VisitACity.Data.Models\VisitACity.Data.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
