Seeding with Middleware

--- a/VisitACity/Web/VisitACity.Web.Infrastructure/VisitACity.Web.Infrastructure.csproj
+++ b/VisitACity/Web/VisitACity.Web.Infrastructure/VisitACity.Web.Infrastructure.csproj
@@ -13,14 +13,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Middlewares\" />
+    <ProjectReference Include="..\..\Data\VisitACity.Data\VisitACity.Data.csproj" />
   </ItemGroup>
 
 </Project>
