--- a/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
+++ b/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Attractions\" />
     <Folder Include="wwwroot\images\Sofia\" />
   </ItemGroup>
 </Project>
