--- a/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
+++ b/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
@@ -18,28 +18,36 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.9" />
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
-    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.161" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.9" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Services\VisitACity.Services.Messaging\VisitACity.Services.Messaging.csproj" />
+    <ProjectReference Include="..\..\Tests\VisitACity.Services.Data.Tests\VisitACity.Services.Data.Tests.csproj" />
     <ProjectReference Include="..\..\VisitACity.Common\VisitACity.Common.csproj" />
     <ProjectReference Include="..\..\Data\VisitACity.Data.Models\VisitACity.Data.Models.csproj" />
     <ProjectReference Include="..\..\Data\VisitACity.Data\VisitACity.Data.csproj" />
     <ProjectReference Include="..\..\Services\VisitACity.Services.Data\VisitACity.Services.Data.csproj" />
     <ProjectReference Include="..\..\Services\VisitACity.Services.Mapping\VisitACity.Services.Mapping.csproj" />
-    <ProjectReference Include="..\..\Services\VisitACity.Services.Messaging\VisitACity.Services.Messaging.csproj" />
     <ProjectReference Include="..\..\Services\VisitACity.Services\VisitACity.Services.csproj" />
     <ProjectReference Include="..\VisitACity.Web.Infrastructure\VisitACity.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\VisitACity.Web.ViewModels\VisitACity.Web.ViewModels.csproj" />
