--- a/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
+++ b/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
@@ -70,7 +70,25 @@
     <Content Update="wwwroot\css\themeCss.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Update="wwwroot\images\Sofia\SaintSofia.jpg">
+    <Content Update="wwwroot\images\Attractions\0f02117f-c86a-4fdd-a75f-5d5df36e6444.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\images\Attractions\4da6e6de-da7c-4f80-94e6-ff0ee6d7a27c.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\images\Attractions\4da772cb-7b80-41a0-b150-da781fd5ae51.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\images\Attractions\608d6963-80b7-45e1-a3cc-e5bf75598070.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\images\Attractions\95887e0c-4615-4932-826c-ce88a7196ad6.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\images\Attractions\d6372516-c590-441b-8b6d-2786cf3202d3.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\images\Attractions\f2273c66-30a4-45b4-a41e-78816f3d9e47.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\js\scripts.js">
@@ -89,6 +107,6 @@
 
   <ItemGroup>
     <Folder Include="Views\Attractions\" />
-    <Folder Include="wwwroot\images\Sofia\" />
+    <Folder Include="wwwroot\images\Attractions\" />
   </ItemGroup>
 </Project>
