email sender first try

--- a/VisitACity/Web/VisitACity.Web/appsettings.json
+++ b/VisitACity/Web/VisitACity.Web/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=VisitACity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "SendGrid": {
+    "ApiKey": "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"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
