--- a/VisitACity/Data/VisitACity.Data.Models/VisitACity.Data.Models.csproj
+++ b/VisitACity/Data/VisitACity.Data.Models/VisitACity.Data.Models.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\VisitACity.Common\VisitACity.Common.csproj" />
     <ProjectReference Include="..\VisitACity.Data.Common\VisitACity.Data.Common.csproj" />
   </ItemGroup>
   
