--- a/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
+++ b/VisitACity/Web/VisitACity.Web/VisitACity.Web.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
+    <ApplicationInsightsResourceId>/subscriptions/2440de6c-02d3-4ffb-84d3-9e05877c4336/resourceGroups/VisitACity/providers/microsoft.insights/components/applicationInsightsVisitACity</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,6 +34,7 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
