--- a/VisitTheCity/Data/VisitACity.Data/appsettings.json
+++ b/VisitTheCity/Data/VisitACity.Data/appsettings.json
@@ -18,6 +18,6 @@
   },
   "AllowedHosts": "*",
   "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=328688d9-920c-4fa5-b15e-156e78a493ce;IngestionEndpoint=https://centralus-2.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/"
+    "ConnectionString": "InstrumentationKey=207e0419-d017-4b9e-a95a-e3dc1d5dae1e;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
   }
 }
