--- a/VisitACity/Tests/VisitACity.Services.Data.Tests/VisitACity.Services.Data.Tests.csproj
+++ b/VisitACity/Tests/VisitACity.Services.Data.Tests/VisitACity.Services.Data.Tests.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\VisitACity.Data\VisitACity.Data.csproj" />
     <ProjectReference Include="..\..\Services\VisitACity.Services.Data\VisitACity.Services.Data.csproj" />
+    <ProjectReference Include="..\..\Web\VisitACity.Web\VisitACity.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
